--- a/environment.yml
+++ b/environment.yml
@@ -213,6 +213,9 @@ dependencies:
       - threadpoolctl==3.6.0
       - tinycss2==1.4.0
       - tokenizers==0.21.1
+      - opencv-python==4.12.0.88
+      - streamlit==1.48.0
+      - pyautogui==0.9.54
       - tomli==2.2.1
       - torch==2.7.1
       - tornado==6.5.1
@@ -241,3 +244,4 @@ dependencies:
       - zipp==3.23.0
       - zstandard==0.23.0
 prefix: C:\Users\ITEC14\anaconda3\envs\LG_LLM
+
