--- a/environment.yml
+++ b/environment.yml
@@ -243,5 +243,12 @@ dependencies:
       - yarl==1.20.1
       - zipp==3.23.0
       - zstandard==0.23.0
+      - pygame
+      - langgraph
+      - langchain-tavily
+      - langchain-experimental
+      - matplotlib
+      - pint
 prefix: C:\Users\ITEC14\anaconda3\envs\LG_LLM
+
 
